@@ -17,6 +17,7 @@
  ******************************************************************************/
 package name.richardson.james.bukkit.alias.persistence;
 
+import java.sql.Timestamp;
 import java.util.Collections;
 import java.util.List;
 
@@ -25,6 +26,8 @@ import javax.persistence.Entity;
 import javax.persistence.Id;
 import javax.persistence.ManyToMany;
 import javax.persistence.Table;
+import javax.persistence.Temporal;
+import javax.persistence.TemporalType;
 
 import com.avaje.ebean.EbeanServer;
 import com.avaje.ebean.validation.NotNull;
@@ -59,8 +62,8 @@ public class InetAddressRecord {
   @Id
   private int id;
 
-  @NotNull
-  private long lastSeen;
+  @Temporal(TemporalType.TIMESTAMP)
+  private Timestamp lastSeen;
 
   @ManyToMany(mappedBy = "addresses")
   private List<PlayerNameRecord> playerNames;
@@ -73,7 +76,7 @@ public class InetAddressRecord {
     return this.id;
   }
 
-  public long getLastSeen() {
+  public Timestamp getLastSeen() {
     return this.lastSeen;
   }
 
@@ -91,7 +94,7 @@ public class InetAddressRecord {
     this.id = id;
   }
 
-  public void setLastSeen(final long lastSeen) {
+  public void setLastSeen(final Timestamp lastSeen) {
     this.lastSeen = lastSeen;
   }
 
@@ -100,7 +103,7 @@ public class InetAddressRecord {
   }
 
   public void updateLastSeen() {
-    this.lastSeen = System.currentTimeMillis();
+    this.lastSeen = new Timestamp(System.currentTimeMillis());
   }
 
 }
