@@ -22,8 +22,7 @@ deletecommand.name: delete
 deletecommand.description: Delete an alias
 deletecommand.permission-description: Allow users to delete aliases.
 deletecommand.usage: <player> <alias>
+deletecommand.dessociated-player: &YELLOW{0} &GREENis no longer associated with &YELLOW{1}.
+deletecommand.specify-player-names: You must specify two player names!
+deletecommand.used: {2} has removed the associated between {0} and {1}.
 
-deletecommand.no-arguments: You must specify two player names!
-deletecommand.log-success: {2} has removed the associated between {0} and {1}.
-deletecommand.success: &YELLOW{0} &GREENis no longer associated with &YELLOW{1}&GREEN.
-deletecommand.player-search-hint: If the player is online, you can type part of the name.
