@@ -1,5 +1,6 @@
 Changelog for Alias (v1.1.2-SNAPSHOT)
 
+2012-08-06 02:18:08 +0100    reimplemented checkcommand (James Richardson)
 2012-08-06 01:23:43 +0100    convert to using async event (James Richardson)
 2012-08-06 01:23:14 +0100    code clean up (James Richardson)
 2012-08-06 01:21:40 +0100    implement api (James Richardson)
